added some comments

--- a/notebooks/Untitled-1.ipynb
+++ b/notebooks/Untitled-1.ipynb
@@ -10,13 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,6 +172,14 @@
    "source": [
     "from pipelines.pipeline_stable_diffusion_im_embed import CLIPImageEncoder, StableDiffusionFromLatents\n",
     "from PIL import Image"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Hyper\n"
    ]
   },
   {
@@ -303,6 +312,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check if face generation from gan latents works"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -372,6 +389,14 @@
    "outputs": [],
    "source": [
     "face.save(\"/workspace/outputs/img1.jpg\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create CLIP latents by decoding face with GAN (512) and re-encoding it with CLIP (768)"
    ]
   },
   {
@@ -452,6 +477,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is to be sure that the order is correct for linear regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -505,27 +538,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make the order of latents in clip_latents the same as in gan_latents\n",
     "clip_latents = [clip_latents_dict[gan_latent] for gan_latent in gan_latents]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([768])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clip_latents[3].shape"
    ]
   },
   {
@@ -534,6 +548,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Form list to tensor\n",
+    "\n",
     "clip_latents_tensor = torch.stack(clip_latents)"
    ]
   },
@@ -2881,6 +2897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fit Linear regression\n",
     "reg = LinearRegression().fit(torch.from_numpy(brain_data.asnumpy()), clip_latents_tensor)"
    ]
   },
@@ -2914,6 +2931,14 @@
    ],
    "source": [
     "reg"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check if it works"
    ]
   },
   {
@@ -3018,23 +3043,13 @@
     }
    ],
    "source": [
+    "#Load modified code for stable diffusion (img2img, changed in order to accept directly the latents)\n",
     "\n",
     "device = \"cuda:0\"\n",
     "stable_diffusion = StableDiffusionFromLatents.from_pretrained(\n",
     "  \"lambdalabs/sd-image-variations-diffusers\",\n",
     "  revision=\"v2.0\",\n",
     "  )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "device = \"cuda:0\"\n",
-    "stable_diffusion2 = vanilla_diffusion.from_pretrained(\n",
-    "  \"lambdalabs/sd-image-variations-diffusers\",\n",
-    "  revision=\"v2.0\",\n",
-    "  )\n"
    ]
   },
   {
@@ -3045,42 +3060,6 @@
    "source": [
     "stable_diffusion = stable_diffusion.to('cuda')\n",
     "#stable_diffusion2 = stable_diffusion2.to('cuda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ntform = transforms.Compose([\\n    transforms.ToTensor(),\\n    transforms.Resize(\\n        (224, 224),\\n        interpolation=transforms.InterpolationMode.BICUBIC,\\n        antialias=False,\\n        ),\\n    transforms.Normalize(\\n      [0.48145466, 0.4578275, 0.40821073],\\n      [0.26862954, 0.26130258, 0.27577711]),\\n    \\n])\\ninp = tform(face).to('cuda')\\ninp = transforms.ToPILImage()(inp)\\nout = stable_diffusion2(inp, guidance_scale=3)\\n\""
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "tform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Resize(\n",
-    "        (224, 224),\n",
-    "        interpolation=transforms.InterpolationMode.BICUBIC,\n",
-    "        antialias=False,\n",
-    "        ),\n",
-    "    transforms.Normalize(\n",
-    "      [0.48145466, 0.4578275, 0.40821073],\n",
-    "      [0.26862954, 0.26130258, 0.27577711]),\n",
-    "    \n",
-    "])\n",
-    "inp = tform(face).to('cuda')\n",
-    "inp = transforms.ToPILImage()(inp)\n",
-    "out = stable_diffusion2(inp, guidance_scale=3)\n",
-    "'''"
    ]
   },
   {
@@ -3280,7 +3259,411 @@
    "cell_type": "code",
    "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:06<00:00,  7.41it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.37it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.33it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.35it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.34it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.32it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.30it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.26it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.27it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.27it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.30it/s]\n",
+      "100%|██████████| 51/51 [00:06<00:00,  7.30it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.28it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.27it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.26it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.26it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.26it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.18it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.20it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.21it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.25it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.24it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 51/51 [00:07<00:00,  7.15it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.23it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      "100%|██████████| 51/51 [00:07<00:00,  7.22it/s]\n",
+      " 20%|█▉        | 10/51 [00:01<00:05,  7.26it/s]"
+     ]
+    }
+   ],
    "source": [
     "make_examples(test, reg, 10)"
    ]
