changed notebook name

--- a/notebooks/Brain2CLIP_img2img_hyper.ipynb
+++ b/notebooks/Brain2CLIP_img2img_hyper.ipynb
@@ -407,7 +407,7 @@
    "source": [
     "def createCLIPLatents(hyper_latents):\n",
     "    \n",
-    "    sd_pipe = CLIPImageEncoder(CLIPModel, CLIPFeatureExtractor)\n",
+    "    sd_pipe = CLIPImageEncoder(CLIPModel, CLIPFeatureExtractor) #check from pretrained\n",
     "    \n",
     "    latents = []\n",
     "    \n",
@@ -435,7 +435,7 @@
     "        face = face.transpose(0, 2, 3, 1)\n",
     "        face = Image.fromarray(face[0], 'RGB')\n",
     "        \n",
-    "        face = tform(face)\n",
+    "        face = tform(face)   #!!!!!!!!!!!!!!!!\n",
     "        \n",
     "        clip_latent = sd_pipe(face)\n",
     "      \n",
@@ -551,15 +551,6 @@
     "# Form list to tensor\n",
     "\n",
     "clip_latents_tensor = torch.stack(clip_latents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg = SGDRegressor()"
    ]
   },
   {
@@ -2898,7 +2889,7 @@
    "outputs": [],
    "source": [
     "# Fit Linear regression\n",
-    "reg = LinearRegression().fit(torch.from_numpy(brain_data.asnumpy()), clip_latents_tensor)"
+    "reg = LinearRegression().fit(torch.from_numpy(brain_data.asnumpy()), clip_latents_tensor)  # check if torch is fine "
    ]
   },
   {
